--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,39 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:text="" />
 
     <EditText
         android:id="@+id/editTextHost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="alltrue.tk"/>
+        android:text="alltrue.tk" />
+
 
     <Button
         android:id="@+id/buttonIP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="get IP"/>
-    <Button
-        android:id="@+id/buttonNetworkInfo"
-        android:layout_width="match_parent"
+        android:text="get IP" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="get NetworkInfo"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/buttonNetworkInfo"
+            android:layout_width="202dp"
+            android:layout_height="wrap_content"
+            android:text="getNetInfo" />
+
+        <Button
+            android:id="@+id/buttonTrafficStats"
+            android:layout_width="202dp"
+            android:layout_height="wrap_content"
+            android:text="getTraffStat" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textViewInfo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="32dp" />
 
-    <ListView
-        android:id="@+id/listViewResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+    <LinearLayout
+        android:id="@+id/myfragment"
+        android:layout_width="0px"
+        android:layout_weight="3"
+        android:layout_height="match_parent"
+        android:orientation="vertical"/>
 </LinearLayout>
