--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
+<EditText
+    android:id="@+id/editTextHost"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:text="alltrue.tk" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="" />
+<TextView
+    android:id="@+id/textViewInfo"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/editTextHost"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="alltrue.tk" />
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <Button
         android:id="@+id/buttonIP"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="get IP" />
 
-    <LinearLayout
+    <Button
+        android:id="@+id/buttonNetworkInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="getNetInfo" />
 
-        <Button
-            android:id="@+id/buttonNetworkInfo"
-            android:layout_width="202dp"
-            android:layout_height="wrap_content"
-            android:text="getNetInfo" />
+    <Button
+        android:id="@+id/buttonTrafficStats"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="getTraffStat" />
+</LinearLayout>
 
-        <Button
-            android:id="@+id/buttonTrafficStats"
-            android:layout_width="202dp"
-            android:layout_height="wrap_content"
-            android:text="getTraffStat" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textViewInfo"
-        android:layout_width="match_parent"
-        android:layout_height="32dp" />
-
-    <LinearLayout
-        android:id="@+id/myfragment"
-        android:layout_width="0px"
-        android:layout_weight="3"
-        android:layout_height="match_parent"
-        android:orientation="vertical"/>
+<fragment
+    android:id="@+id/fragment_place"
+    android:name="tk.alltrue.getipbyname.IPbyName"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 </LinearLayout>
